tests/snapshots/terminal_e2e__inspector_after_browse_selection.snap
---
source: tests/terminal_e2e.rs
expression: inspector.with_styles()
---
size: 100x30  cursor: hidden
 sauva / Inspector                                                                           U+0042

 Identity                                                   ┃ Glyph
  Character                  B                              ┃  Font     —
  Code Point                 U+0042                         ┃  Version  —
  Primary Name               LATIN CAPITAL LETTER B         ┃
  Aliases                    None                           ┃
  Plane                      0 — Basic Multilingual Plane   ┃
  Block                      Basic Latin                    ┃
 ─────────────────────────────────────────────────────────  ┃
 Classification                                             ┃
  General Category           Lu — Uppercase Letter          ┃
  Script                     Latin                          ┃
  Age                        1.1                            ┃
  East Asian Width           Na — Narrow                    ┃
  Canonical Combining Class  0 — Not Reordered              ┃           Graphics disabled
  Bidi Class                 L — Left To Right              ┃  Enable with --graphics auto/force.
  Default Ignorable          No                             ┃
 ─────────────────────────────────────────────────────────  ┃
 Encoding                                                   ┃
  UTF-8                      42                             ┃
  UTF-16                     0042                           ┃
  HTML Decimal               &#66;                          ┃
  HTML Hex                   &#x42;                         │
  Rust char                  '\u{42}'                       │
  Unicode Escape             \u0042                         │
 ─────────────────────────────────────────────────────────  │
 Normalization                                              │

 h/l Point  k/j Field  [/] Section  C-u/C-d Page  y Copy  / Search  p/r/b/c Browse  q Quit  F1 Help

styles:
0: 0-5 fg=6 bold; 93-99 fg=8
2: 1-8 fg=4 bold; 60 fg=8; 62-66 fg=4 bold
3: 1-57 fg=0 bg=6; 60 fg=8; 63-71 fg=8
4: 2-28 fg=8; 60 fg=8; 63-71 fg=8
5: 2-28 fg=8; 60 fg=8
6: 2-28 fg=8; 60 fg=8
7: 2-28 fg=8; 60 fg=8
8: 2-28 fg=8; 60 fg=8
9: 1-57 fg=8; 60 fg=8
10: 1-14 fg=4 bold; 60 fg=8
11: 2-28 fg=8; 60 fg=8
12: 2-28 fg=8; 60 fg=8
13: 2-28 fg=8; 60 fg=8
14: 2-28 fg=8; 60 fg=8
15: 2-28 fg=8; 60 fg=8; 72-88 fg=3 bold
16: 2-28 fg=8; 60 fg=8; 63-96 fg=8
17: 2-28 fg=8; 60 fg=8
18: 1-57 fg=8; 60 fg=8
19: 1-8 fg=4 bold; 60 fg=8
20: 2-28 fg=8; 60 fg=8
21: 2-28 fg=8; 60 fg=8
22: 2-28 fg=8; 60 fg=8
23: 2-28 fg=8; 60 fg=8
24: 2-28 fg=8; 60 fg=8
25: 2-28 fg=8; 60 fg=8
26: 1-57 fg=8; 60 fg=8
27: 1-13 fg=4 bold; 60 fg=8
29: 1-3 fg=3; 4-9 fg=8; 12-14 fg=3; 15-20 fg=8; 23-25 fg=3; 26-33 fg=8; 36-42 fg=3; 43-47 fg=8; 50 fg=3; 51-55 fg=8; 58 fg=3; 59-65 fg=8; 68-74 fg=3; 75-81 fg=8; 84 fg=3; 85-89 fg=8; 92-93 fg=3; 94-98 fg=8
