tests/snapshots/terminal_e2e__keeps_the_search_result_selected_across_terminal_resizes.snap
---
source: tests/terminal_e2e.rs
expression: minimum.with_styles()
---
size: 60x16  cursor: 2,15
 sauva / Search                           1 result · U+2192

 Search  U+2192
───────────────────────────────────────────────────────────
 Results                                          1 result
  →   U+2192    RIGHTWARDS ARROW









 ↑/↓ Move  Enter Inspect  Esc Close  C-c Quit       F1 Help

styles:
0: 0-5 fg=6 bold; 42-59 fg=8
2: 1-8 fg=8
3: 0-58 fg=8
4: 1-7 fg=4 bold; 50-57 fg=8
5: 2-5 fg=0 bg=6; 6-11 fg=0 bg=6 bold; 12-57 fg=0 bg=6
15: 1-3 fg=3; 4-8 fg=8; 11-15 fg=3; 16-23 fg=8; 26-28 fg=3; 29-34 fg=8; 37-39 fg=3; 40-44 fg=8; 52-53 fg=3; 54-58 fg=8
