tests/snapshots/terminal_e2e__normalization_comparison_highlights_changes_and_preserves_navigation.snap
---
source: tests/terminal_e2e.rs
expression: screen.with_styles()
---
size: 100x30  cursor: hidden
 sauva / Sequence / Normalization                                                              NFKC

 Original                                                                   7 CP · 18 Bytes · 4 GC
  Á␠①👩‍
  U+0041 U+0301 U+0020 U+2460 U+1F469 U+200D U+1F4BB

   Form  vs Original                                                                 CP  Bytes  GC
   NFC   Changed                                                                      6     17   4
   NFD   Unchanged                                                                    7     18   4
   NFKC  Changed                                                                      6     15   4
   NFKD  Changed                                                                      7     16   4

 NFKC Result                                                                     2 changed regions
  Á␠1👩‍
  U+00C1 U+0020 U+0031 U+1F469 U+200D U+1F4BB














 k/j Form  Enter Inspect  y Copy  BS/Esc Sequence  q Quit                                   F1 Help

styles:
0: 0-5 fg=6 bold; 95-99 fg=8
2: 1-8 fg=4 bold; 9-97 fg=8
3: 2 fg=0 bg=3 underline; 4 fg=0 bg=3 underline
4: 2-15 fg=0 bg=3 underline; 16-22 fg=8; 23-29 fg=0 bg=3 underline; 30-52 fg=8
6: 1-97 fg=8
9: 1-97 fg=0 bg=6
12: 1-11 fg=4 bold; 12-97 fg=8
13: 2 fg=0 bg=3 underline; 4 fg=0 bg=3 underline
14: 2-8 fg=0 bg=3 underline; 9-15 fg=8; 16-22 fg=0 bg=3 underline; 23-45 fg=8
29: 1-3 fg=3; 4-8 fg=8; 11-15 fg=3; 16-23 fg=8; 26 fg=3; 27-31 fg=8; 34-39 fg=3; 40-48 fg=8; 51 fg=3; 52-56 fg=8; 92-93 fg=3; 94-98 fg=8
