tests/snapshots/terminal_e2e__normalization_fits_the_minimum_terminal_and_opens_single_point_results.snap
---
source: tests/terminal_e2e.rs
expression: screen.with_styles()
---
size: 60x16  cursor: hidden
 sauva / Sequence / Normalization                       NFC

 Original                            2 CP · 3 Bytes · 1 GC
  Á
  U+0041 U+0301

  Form  vs Original                         CP  Bytes  GC
  NFC   Changed                              1      2   1
  NFD   Unchanged                            2      3   1
  NFKC  Changed                              1      2   1
  NFKD  Unchanged                            2      3   1

 NFC Result                               1 changed region
  Á
  U+00C1
 k/j Form  Enter Inspect  y Copy  BS/Esc Sequence   F1 Help

styles:
0: 0-5 fg=6 bold; 56-59 fg=8
2: 1-8 fg=4 bold; 9-57 fg=8
3: 2 fg=0 bg=3 underline
4: 2-14 fg=0 bg=3 underline
6: 2-56 fg=8
7: 1-57 fg=0 bg=6
12: 1-10 fg=4 bold; 11-57 fg=8
13: 2 fg=0 bg=3 underline
14: 2-7 fg=0 bg=3 underline
15: 1-3 fg=3; 4-8 fg=8; 11-15 fg=3; 16-23 fg=8; 26 fg=3; 27-31 fg=8; 34-39 fg=3; 40-48 fg=8; 52-53 fg=3; 54-58 fg=8
