tests/snapshots/terminal_e2e__normalization_reference_scrolls_on_jumps_and_resizes_without_moving_the_original_selection.snap
---
source: tests/terminal_e2e.rs
expression: screen.with_styles()
---
size: 60x16  cursor: hidden
 sauva / Sequence / NFKC Result            150/150 · U+0069

 Original        50 CP   NFKC Result       150 CP · 150 GC
  40 •  40  U+FB03        140 •  140  U+0066    f — LATIN
  41 •  41  U+FB03        141 •  141  U+0069    i — LATIN
  42 •  42  U+FB03        142 •  142  U+0066    f — LATIN
  43 •  43  U+FB03        143 •  143  U+0066    f — LATIN
  44 •  44  U+FB03        144 •  144  U+0069    i — LATIN
  45 •  45  U+FB03        145 •  145  U+0066    f — LATIN
  46 •  46  U+FB03        146 •  146  U+0066    f — LATIN
  47 •  47  U+FB03        147 •  147  U+0069    i — LATIN
  48 •  48  U+FB03        148 •  148  U+0066    f — LATIN
  49 •  49  U+FB03    ┃   149 •  149  U+0066    f — LATIN
  50 •  50  U+FB03    ┃   150 •  150  U+0069    i — LATIN ┃

 k/j Move  Enter Inspect  Y Copy…  BS/Esc Back      F1 Help

styles:
0: 0-5 fg=6 bold; 43-59 fg=8
2: 1-8 fg=4 bold; 17-21 fg=8; 25-35 fg=4 bold; 43-57 fg=8
3: 2-6 fg=8; 26-31 fg=8
4: 2-6 fg=8; 26-31 fg=8
5: 2-6 fg=8; 26-31 fg=8
6: 2-6 fg=8; 26-31 fg=8
7: 2-6 fg=8; 26-31 fg=8
8: 2-6 fg=8; 26-31 fg=8
9: 2-6 fg=8; 26-31 fg=8
10: 2-6 fg=8; 26-31 fg=8
11: 2-6 fg=8; 26-31 fg=8
12: 2-6 fg=8; 22 fg=8; 26-31 fg=8
13: 2-6 fg=6 bold; 7-21 fg=0 bg=6; 22 fg=8; 26-31 fg=6 bold; 32-57 fg=0 bg=6; 58 fg=8
15: 1-3 fg=3; 4-8 fg=8; 11-15 fg=3; 16-23 fg=8; 26 fg=3; 27-32 fg=8; 35-40 fg=3; 41-45 fg=8; 52-53 fg=3; 54-58 fg=8
