tests/snapshots/terminal_e2e__normalization_result_links_expansions_and_adjacent_changes_to_separate_original_rows.snap
---
source: tests/terminal_e2e.rs
expression: screen.with_styles()
---
size: 100x30  cursor: hidden
 sauva / Sequence / NFKC Result                                                        4/5 · U+0031

 Original         3 CP   NFKC Result                                   5 code points · 5 graphemes
  1 •  1  U+FB03          1 •  1  U+0066    f — LATIN SMALL LETTER F
  2 •  2  U+2460          2 •  2  U+0066    f — LATIN SMALL LETTER F
  3 •  3  U+2461          3 •  3  U+0069    i — LATIN SMALL LETTER I
                          4 •  4  U+0031    1 — DIGIT ONE
                          5 •  5  U+0032    2 — DIGIT TWO





















 k/j Move  [/] Grapheme  Enter Inspect  Y Copy...  BS/Esc Back  q Quit                      F1 Help

styles:
0: 0-5 fg=6 bold; 87-99 fg=8
2: 1-8 fg=4 bold; 18-21 fg=8; 25-35 fg=4 bold; 71-97 fg=8
3: 2-5 fg=8; 26-29 fg=8
4: 2-5 fg=6 bold; 6-21 fg=0 bg=6; 26-29 fg=8
5: 2-5 fg=8; 26-29 fg=8
6: 26-29 fg=6 bold; 30-97 fg=0 bg=6
7: 26-29 fg=8
29: 1-3 fg=3; 4-8 fg=8; 11-13 fg=3; 14-22 fg=8; 25-29 fg=3; 30-37 fg=8; 40 fg=3; 41-48 fg=8; 51-56 fg=3; 57-61 fg=8; 64 fg=3; 65-69 fg=8; 92-93 fg=3; 94-98 fg=8
