tests/snapshots/terminal_e2e__reopens_search_and_corrects_a_query_with_no_results.snap
---
source: tests/terminal_e2e.rs
expression: reopened.with_styles()
---
size: 100x30  cursor: 1,18
┌ Search ──────────────────────────────────────────────────┐┌ Selection Preview ───────────────────┐
│ rightwards arrox                                         ││                                      │
└──────────────────────────────────────────────────────────┘│                                      │
┌ Results · 0 ─────────────────────────────────────────────┐│                                      │
│ No matching characters                                   ││                                      │
│ Try another name, code point, or character               ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││              No preview              │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
 ↑/↓: Move  Enter: Inspect  Esc: Close  C-c: Quit  F1: Help

styles:
4: 2-23 bold
5: 2-43 fg=8
14: 62-97 fg=8
29: 0-99 fg=8
