tests/snapshots/terminal_e2e__sequence_clusters_keep_the_cursor_and_highlight_in_the_row_body.snap
---
source: tests/terminal_e2e.rs
expression: screen.with_styles()
---
size: 100x30  cursor: hidden
 sauva / Sequence                                                                      2/6 · U+0301

 Code Points                   6 code points · 3 graphemes  │ Selection
  1 ┌   1  U+0041    A — LATIN CAPITAL LETTER A             │  Character        ◌́
    └ ▸ 2  U+0301    ◌́ — COMBINING ACUTE ACCENT             │  Code Point       U+0301
  2 •   3  U+0020    <SPACE> — SPACE                        │  Primary Name
  3 ┌   4  U+1F469   👩 — WOMAN                             │    COMBINING ACUTE ACCENT
    │   5  U+200D    <DEFAULT IGNORABLE> — ZERO WIDTH JOIN  │  Grapheme         1/3 · member 2/2
    └   6  U+1F4BB   💻 — PERSONAL COMPUTER                 │  Block
                                                            │    Combining Diacritical Marks
                                                            │  General Category
                                                            │    Mn — Nonspacing Mark
                                                            │ ─────────────────────────────────────
                                                            │ Glyph
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
 k/j Move  g/G Ends  Enter Inspect  q Quit                                                  F1 Help

styles:
0: 0-5 fg=6 bold; 87-99 fg=8
2: 1-11 fg=4 bold; 31-57 fg=8; 60 fg=8; 62-70 fg=4 bold
3: 2-5 fg=8; 60 fg=8; 63-79 fg=8
4: 2-5 fg=8; 6-57 fg=0 bg=6; 60 fg=8; 63-79 fg=8
5: 2-5 fg=8; 60 fg=8; 63-74 fg=8
6: 2-5 fg=8; 60 fg=8; 63-64 fg=8
7: 2-5 fg=8; 60 fg=8; 63-79 fg=8
8: 2-5 fg=8; 60 fg=8; 63-67 fg=8
9: 60 fg=8; 63-64 fg=8
10: 60 fg=8; 63-78 fg=8
11: 60 fg=8; 63-64 fg=8
12: 60 fg=8; 62-98 fg=8
13: 60 fg=8; 62-98 fg=4 bold
14: 60 fg=8
15: 60 fg=8
16: 60 fg=8
17: 60 fg=8
18: 60 fg=8
19: 60 fg=8
20: 60 fg=8
21: 60 fg=8
22: 60 fg=8
23: 60 fg=8
24: 60 fg=8
25: 60 fg=8
26: 60 fg=8
27: 60 fg=8
28: 60 fg=8
29: 1-3 fg=3; 4-8 fg=8; 11-13 fg=3; 14-18 fg=8; 21-25 fg=3; 26-33 fg=8; 36 fg=3; 37-41 fg=8; 92-93 fg=3; 94-98 fg=8
