tests/snapshots/terminal_e2e__sequence_clusters_keep_the_highlight_in_the_row_body.snap
---
source: tests/terminal_e2e.rs
expression: screen.with_styles()
---
size: 100x30  cursor: hidden
 sauva / Sequence                                                                     2/8 · U+1F1F5

 Code Points                   8 code points · 4 graphemes  │ Selection
  1 ┌ 1  U+1F1EF   🇯 — REGIONAL INDICATOR SYMBOL LETTER J   │  Character        🇵
    └ 2  U+1F1F5   🇵 — REGIONAL INDICATOR SYMBOL LETTER P   │  Code Point       U+1F1F5
  2 • 3  U+0058    X — LATIN CAPITAL LETTER X               │  Primary Name
  3 ┌ 4  U+000D    <CONTROL> — No Primary Name              │    REGIONAL INDICATOR SYMBOL LETTER P
    └ 5  U+000A    <CONTROL> — No Primary Name              │  Grapheme         1/4 · member 2/2
  4 ┌ 6  U+1F468   👨 — MAN                                 │  Block
    │ 7  U+200D    <DEFAULT IGNORABLE> — ZERO WIDTH JOINER  │    Enclosed Alphanumeric Supplement
    └ 8  U+1F527   🔧 — WRENCH                              │  General Category So — Other Symbol
                                                            │
                                                            │ ─────────────────────────────────────
                                                            │ Glyph
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
 k/j Move  g/G Ends  Enter Inspect  n Normalize  q Quit                                     F1 Help

styles:
0: 0-5 fg=6 bold; 86-99 fg=8
2: 1-11 fg=4 bold; 31-57 fg=8; 60 fg=8; 62-70 fg=4 bold
3: 2-5 fg=6 bold; 60 fg=8; 63-79 fg=8
4: 2-5 fg=6 bold; 6-57 fg=0 bg=6; 60 fg=8; 63-79 fg=8
5: 2-5 fg=8; 60 fg=8; 63-74 fg=8
6: 2-5 fg=8; 60 fg=8; 63-64 fg=8
7: 2-5 fg=8; 60 fg=8; 63-79 fg=8
8: 2-5 fg=8; 60 fg=8; 63-67 fg=8
9: 2-5 fg=8; 60 fg=8; 63-64 fg=8
10: 2-5 fg=8; 60 fg=8; 63-79 fg=8
11: 60 fg=8
12: 60 fg=8; 62-98 fg=8
13: 60 fg=8; 62-98 fg=4 bold
14: 60 fg=8
15: 60 fg=8
16: 60 fg=8
17: 60 fg=8
18: 60 fg=8
19: 60 fg=8
20: 60 fg=8
21: 60 fg=8
22: 60 fg=8
23: 60 fg=8
24: 60 fg=8
25: 60 fg=8
26: 60 fg=8
27: 60 fg=8
28: 60 fg=8
29: 1-3 fg=3; 4-8 fg=8; 11-13 fg=3; 14-18 fg=8; 21-25 fg=3; 26-33 fg=8; 36 fg=3; 37-46 fg=8; 49 fg=3; 50-54 fg=8; 92-93 fg=3; 94-98 fg=8
