tests/snapshots/terminal_e2e__sequence_copy_dialog_preserves_source_and_candidate_across_help_and_resize.snap
---
source: tests/terminal_e2e.rs
expression: screen.with_styles()
---
size: 60x16  cursor: hidden
 sauva / Sequence                              2/6 · U+0301

 C┌ Copy ────────────────────────────────────────────────┐
  │ Sequence · CP 2/6 · U+0301                           │
  │                                                      │
  │  Code Point                                  U+0301  │
  │  Grapheme Cluster                     2 code points  │
  │  Whole Input                          6 code points  │
  │                                                      │
  │ Preview · 2 CP · 3 bytes                             │
  │ Á                                                    │
  │ U+0041 U+0301                                        │
  │                                                      │
  │ Display aids are not copied                          │
  └──────────────────────────────────────────────────────┘
 k/j Move  Enter Copy  Esc Cancel  C-c Quit         F1 Help

styles:
0: 0-5 fg=6 bold; 47-59 fg=8
2: 1 fg=4 bold; 2 fg=8; 3-8 fg=4 bold; 9-57 fg=8
3: 2 fg=8; 4-29 fg=8; 57 fg=8
4: 2 fg=8; 57 fg=8
5: 2 fg=8; 57 fg=8
6: 2 fg=8; 4-55 fg=0 bg=6; 57 fg=8
7: 2 fg=8; 57 fg=8
8: 2 fg=8; 57 fg=8
9: 2 fg=8; 4-10 fg=4 bold; 11-27 fg=8; 57 fg=8
10: 2 fg=8; 57 fg=8
11: 2 fg=8; 4-16 fg=8; 57 fg=8
12: 2 fg=8; 57 fg=8
13: 2 fg=8; 4-30 fg=8; 57 fg=8
14: 2-57 fg=8
15: 1-3 fg=3; 4-8 fg=8; 11-15 fg=3; 16-20 fg=8; 23-25 fg=3; 26-32 fg=8; 35-37 fg=3; 38-42 fg=8; 52-53 fg=3; 54-58 fg=8
